--- a/YouTubeDeepDarkClassic.css
+++ b/YouTubeDeepDarkClassic.css
@@ -2,7 +2,9 @@
 
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*2.0.6*/
+/*GNU General Public License v3.0.*/
+
+/*2.0.7*/
 	
 	/*Main color variables*/
 	:root
@@ -143,6 +145,26 @@
 		--hover-background: #0f0d05;
 		--main-text: #fffdf5;
 		--dimer-text: #fff8e1;
+		*/
+		
+		/*Ubuntu grey colors*/
+		/*
+		--main-color: #EF7847;
+		--main-background: #312D2A;
+		--second-background: #3D3C38; 
+		--hover-background: #59564D;
+		--main-text: #F2F1EF;
+		--dimer-text: #E6E5E3;
+		*/
+		
+		/*Ubuntu purple colors*/
+		/*
+		--main-color: #EF7847;
+		--main-background: #2C071A;
+		--second-background: #430B28; 
+		--hover-background: #520D30;
+		--main-text: #F2F1EF;
+		--dimer-text: #E6E5E3;
 		*/
 		
 		/*Orange*/
