--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 	
 /*GNU General Public License v3.0.*/
 
-/*2.3.7*/
+/*2.3.8*/
 
 	/*Main color variables*/
 	:root
@@ -218,15 +218,6 @@
 		--yt-searchbox-legacy-button-hover-color: var(--hover-background) !important;
 		--yt-searchbox-legacy-button-hover-border-color: var(--main-background) !important;
 		--yt-searchbox-legacy-button-icon-color: var(--dimer-text) !important;
-		--ytd-searchbox-border-color: var(--main-background) !important;
-		--ytd-searchbox-legacy-border-color: var(--main-background) !important;
-		--ytd-searchbox-legacy-border-shadow-color: var(--second-background) !important;
-		--ytd-searchbox-legacy-button-color: var(--hover-background) !important;
-		--ytd-searchbox-legacy-button-border-color: var(--main-background) !important;
-		--ytd-searchbox-legacy-button-focus-color: var(--second-background) !important;
-		--ytd-searchbox-legacy-button-hover-color: var(--hover-background) !important;
-		--ytd-searchbox-legacy-button-hover-border-color: var(--main-background) !important;
-		--ytd-searchbox-legacy-button-icon-color: var(--dimer-text) !important;
 		--yt-commentbox-border-inactive: var(--dimer-text) !important;
 		--yt-commentbox-border-active: var(--main-text) !important;
 		--yt-paper-button-ink-color: var(--hover-background) !important;
@@ -260,15 +251,10 @@
 		--yt-primary-disabled-button-text-color: var(--hover-background) !important;
 		--yt-badge-background: var(--hover-background) !important;
 		--yt-badge-disabled-color: var(--hover-background) !important;
-		--ytd-badge-background: var(--hover-background) !important;
-		--ytd-badge-disabled-color: var(--hover-background) !important;
 		--yt-collection-badge-color: var(--dimer-text) !important;
 		--yt-owner-badge-color: var(--hover-background) !important;
-		--ytd-owner-badge-color: var(--hover-background) !important;
 		--yt-simple-badge-color: var(--dimer-text) !important;
 		--yt-ad-badge-text-color: var(--main-background) !important;
-		--ytd-simple-badge-color: var(--dimer-text) !important;
-		--ytd-ad-badge-text-color: var(--main-background) !important;
 		--paper-menu-background-color: var(--second-background) !important;
 		--paper-menu-color: var(--main-text) !important;
 		--primary-text-color: var(--main-text) !important;
@@ -287,30 +273,17 @@
 		--yt-transcript-background: var(--second-background) !important;
 		--yt-watch-card-secondary-text-color: var(--main-text) !important;
 		--yt-watch-card-album-header-background: var(--main-background) !important;
-		--ytd-watch-card-secondary-text-color: var(--main-text) !important;
-		--ytd-watch-card-album-header-background: var(--main-background) !important;
 		--yt-comment-text-color: var(--main-text) !important;
 		--yt-comment-metadata-text-color: var(--hover-background) !important;
-		--ytd-comment-text-color: var(--main-text) !important;
-		--ytd-comment-metadata-text-color: var(--hover-background) !important;
 		--yt-moderation-panel-background: var(--second-background) !important;
 		--yt-moderation-panel-hover: var(--second-background) !important;
 		--yt-moderation-panel-comment-text: var(--dimer-text) !important;
 		--yt-moderation-panel-comment-metadata-text: var(--dimer-text) !important;
 		--yt-moderation-icon-color: var(--dimer-text) !important;
 		--yt-moderation-icon-hover-color: var(--dimer-text) !important;
-		--ytd-moderation-panel-background: var(--second-background) !important;
-		--ytd-moderation-panel-hover: var(--second-background) !important;
-		--ytd-moderation-panel-comment-text: var(--dimer-text) !important;
-		--ytd-moderation-panel-comment-metadata-text: var(--dimer-text) !important;
-		--ytd-moderation-icon-color: var(--dimer-text) !important;
-		--ytd-moderation-icon-hover-color: var(--dimer-text) !important;
 		--yt-backstage-metadata-text-color: var(--main-text) !important;
 		--yt-backstage-video-link-background-color: var(--second-background) !important;
 		--yt-backstage-image-alert-color: var(--main-text) !important;
-		--ytd-backstage-metadata-text-color: var(--main-text) !important;
-		--ytd-backstage-video-link-background-color: var(--second-background) !important;
-		--ytd-backstage-image-alert-color: var(--main-text) !important;
 		--yt-shopping-product-info: var(--dimer-text) !important;
 		--yt-live-chat-action-panel-background-color: var(--second-background) !important;
 		--yt-live-chat-action-panel-background-color-transparent: var(--second-background) !important;
@@ -343,6 +316,114 @@
 		--yt-backstage-cancel-background-color: var(--main-text) !important;
 		--yt-backstage-cancel-color: var(--main-text) !important;
 		--yt-offer-background-color: var(--hover-background) !important;
+		
+		--ytd-primary-color: var(--main-text) !important;
+		--ytd-primary-text-color: var(--main-text) !important;
+		--ytd-hovered-text-color: var(--dimer-text) !important;
+		--ytd-secondary-text-color: var(--dimer-text) !important;
+		--ytd-disabled-text-color: var(--hover-background) !important;
+		--ytd-placeholder-text-color: var(--dimer-text) !important;
+		--ytd-border-color: var(--hover-background) !important;
+		--ytd-searchbox-border-color: var(--main-background) !important;
+		--ytd-searchbox-legacy-border-color: var(--main-background) !important;
+		--ytd-searchbox-legacy-border-shadow-color: var(--second-background) !important;
+		--ytd-searchbox-legacy-button-color: var(--hover-background) !important;
+		--ytd-searchbox-legacy-button-border-color: var(--main-background) !important;
+		--ytd-searchbox-legacy-button-focus-color: var(--second-background) !important;
+		--ytd-searchbox-legacy-button-hover-color: var(--hover-background) !important;
+		--ytd-searchbox-legacy-button-hover-border-color: var(--main-background) !important;
+		--ytd-searchbox-legacy-button-icon-color: var(--dimer-text) !important;
+		--ytd-commentbox-border-inactive: var(--dimer-text) !important;
+		--ytd-commentbox-border-active: var(--main-text) !important;
+		--ytd-paper-button-ink-color: var(--hover-background) !important;
+		--ytd-button-color: var(--dimer-text) !important;
+		--ytd-icon-color: var(--dimer-text) !important;
+		--ytd-icon-hover-color: var(--main-color) !important;
+		--ytd-icon-active-color: var(--main-color) !important;
+		--ytd-icon-disabled-color: var(--hover-background) !important;
+		--ytd-endpoint-color: var(--hover-background) !important;
+		--ytd-expand-color: var(--dimer-text) !important;
+		--ytd-metadata-color: var(--dimer-text) !important;
+		--ytd-channel-owner: var(--main-color) !important;
+		--ytd-autoplay-toggle: var(--main-text) !important;
+		--ytd-playlist-background-header: var(--hover-background) !important;
+		--ytd-playlist-background-item: var(--second-background) !important;
+		--ytd-playlist-title-text: var(--main-text) !important;
+		--ytd-playlist-message-text: var(--main-text) !important;
+		--ytd-subscribe-button-text-color: var(--main-text) !important;
+		--ytd-brand-color: var(--main-text) !important;
+		--ytd-button-text-color: var(--dimer-text) !important;
+		--ytd-button-payment-text-color: var(--main-text) !important;
+		--ytd-video-publish-date-color: var(--dimer-text) !important;
+		--ytd-vat-notice-text: var(--dimer-text) !important;
+		--ytd-copyright-text: var(--dimer-text) !important;
+		--ytd-guide-entry-hover-background-color: var(--hover-background) !important;
+		--ytd-survey-button-color: var(--ytd-primary-text-color) !important;
+		--ytd-thumbnail-placeholder-color: var(--second-background) !important;
+		--ytd-transcript-cue-hover-background-color: var(--hover-background) !important;
+		--ytd-transcript-toolbar-background-color: var(--hover-background) !important;
+		--ytd-transcript-toolbar-text: var(--main-text) !important;
+		--ytd-primary-disabled-button-text-color: var(--hover-background) !important;
+		--ytd-badge-background: var(--hover-background) !important;
+		--ytd-badge-disabled-color: var(--hover-background) !important;
+		--ytd-collection-badge-color: var(--dimer-text) !important;
+		--ytd-owner-badge-color: var(--hover-background) !important;
+		--ytd-simple-badge-color: var(--dimer-text) !important;
+		--ytd-ad-badge-text-color: var(--main-background) !important;
+		--ytd-simple-menu-header-background: var(--second-background) !important;
+		--ytd-item-section-header-color: var(--main-text) !important;
+		--ytd-menu-hover-backgound-color: var(--second-background) !important;
+		--ytd-menu-focus-background-color: var(--hover-background) !important;
+		--ytd-app-background: var(--main-background) !important;
+		--ytd-main-app-background: var(--main-background) !important;
+		--ytd-main-app-background-tmp: var(--main-background) !important;
+		--ytd-guide-background: var(--second-background) !important;
+		--ytd-dialog-background: var(--second-background) !important;
+		--ytd-searchbox-background: var(--main-background) !important;
+		--ytd-channel-header-background:  var(--second-background) !important;
+		--ytd-playlist-sidebar-background: var(--second-background) !important;
+		--ytd-transcript-background: var(--second-background) !important;
+		--ytd-watch-card-secondary-text-color: var(--main-text) !important;
+		--ytd-watch-card-album-header-background: var(--main-background) !important;
+		--ytd-comment-text-color: var(--main-text) !important;
+		--ytd-comment-metadata-text-color: var(--hover-background) !important;
+		--ytd-moderation-panel-background: var(--second-background) !important;
+		--ytd-moderation-panel-hover: var(--second-background) !important;
+		--ytd-moderation-panel-comment-text: var(--dimer-text) !important;
+		--ytd-moderation-panel-comment-metadata-text: var(--dimer-text) !important;
+		--ytd-moderation-icon-color: var(--dimer-text) !important;
+		--ytd-moderation-icon-hover-color: var(--dimer-text) !important;
+		--ytd-backstage-metadata-text-color: var(--main-text) !important;
+		--ytd-backstage-video-link-background-color: var(--second-background) !important;
+		--ytd-backstage-image-alert-color: var(--main-text) !important;
+		--ytd-shopping-product-info: var(--dimer-text) !important;
+		--ytd-live-chat-action-panel-background-color: var(--second-background) !important;
+		--ytd-live-chat-action-panel-background-color-transparent: var(--second-background) !important;
+		--ytd-live-chat-primary-text-color: var(--main-text) !important;
+		--ytd-live-chat-secondary-text-color: var(--dimer-text) !important;
+		--ytd-live-chat-tertiary-text-color: var(--hover-background) !important;
+		--ytd-swatch-primary-darker: var(--hover-background) !important;
+		--ytd-swatch-primary: var(--second-background) !important;
+		--ytd-swatch-text: var(--main-text) !important;
+		--ytd-swatch-input-text: var(--main-text) !important;
+		--ytd-swatch-textbox-bg: var(--main-background) !important;
+		--ytd-swatch-icon-color: var(--hover-background) !important;
+		--ytd-swatch-important-text: var(--main-text) !important;
+		--ytd-swatch-logo-override: var(--main-text) !important;
+		--ytd-lightsource-section1-color: var(--ytd-channel-header-background) !important;
+		--ytd-lightsource-primary-title-color: var(--ytd-primary-text-color) !important;
+		--ytd-lightsource-secondary-title-color: var(--ytd-metadata-color) !important;
+		--ytd-featured-channel-title-text-color: var(--dimer-text) !important;
+		--ytd-disabled-text-color: var(--dimer-text) !important;
+		--ytd-disabled-paper-button-color: var(--ytd-disabled-text-color);
+		--ytd-brand-paper-button-color: var(--main-color) !important;
+		--ytd-paper-radio-button-checked-color: var(--dimer-text) !important;
+		--ytd-toggle-color: var(--main-color) !important;
+		--ytd-formatted-string-deemphasize-color: var(--dimer-text) !important;
+		--ytd-moderation-panel-likely-spam-divider: var(--hover-background) !important;
+		--ytd-backstage-cancel-background-color: var(--main-text) !important;
+		--ytd-backstage-cancel-color: var(--main-text) !important;
+		--ytd-offer-background-color: var(--hover-background) !important;
 	}
 	
 	/*Background for the entire page*/
