--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 	
 /*GNU General Public License v3.0.*/
 
-/*2.4.1*/
+/*2.4.2*/
 
 	/*Main color variables*/
 	:root
@@ -862,7 +862,7 @@
 	}
 	
 	/*New logo*/
-	ytd-topbar-logo-renderer.style-scope:nth-child(4) > a:nth-child(2) > yt-icon:nth-child(1) > svg:nth-child(1) > g:nth-child(1) > g:nth-child(1) > path:nth-child(1), ytd-topbar-logo-renderer.style-scope:nth-child(2) > a:nth-child(2) > yt-icon:nth-child(1) > svg:nth-child(1) > g:nth-child(1) > g:nth-child(1) > path:nth-child(1), ytd-topbar-logo-renderer.style-scope:nth-child(4) > a:nth-child(1) > yt-icon:nth-child(1) > svg:nth-child(1) > g:nth-child(1) > g:nth-child(1) > path:nth-child(1), ytd-topbar-logo-renderer.style-scope:nth-child(2) > a:nth-child(1) > yt-icon:nth-child(1) > svg:nth-child(1) > g:nth-child(1) > g:nth-child(1) > path:nth-child(1), ytd-topbar-logo-renderer.style-scope:nth-child(4) > a:nth-child(1) > div:nth-child(1) > svg:nth-child(1) > g:nth-child(1) > g:nth-child(1) > path:nth-child(1), ytd-topbar-logo-renderer.style-scope:nth-child(2) > a:nth-child(1) > div:nth-child(1) > svg:nth-child(1) > g:nth-child(1) > g:nth-child(1) > path:nth-child(1)
+	#logo-icon-container.ytd-topbar-logo-renderer svg g path[fill*="#FF0000"]
 	{
 		fill: var(--main-color) !important;
 	}
