--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 	
 /*GNU General Public License v3.0.*/
 
-/*2.4.2*/
+/*2.4.3*/
 
 	/*Main color variables*/
 	:root
@@ -1402,6 +1402,12 @@
 	yt-multi-page-menu-section-renderer.style-scope div ytd-compact-link-renderer a paper-item div yt-icon svg g path[fill="#C7322A"]
 	{
 		fill: var(--main-color) !important;
+	}
+	
+	/*"Best" of YouTube icons in sidepane*/
+	.ytd-guide-section-renderer img.yt-img-shadow
+	{
+		filter: grayscale(100%);
 	}
 
 }
