--- a/YouTubeDeepDarkClassic.css
+++ b/YouTubeDeepDarkClassic.css
@@ -4,7 +4,7 @@
 
 /*GNU General Public License v3.0.*/
 
-/*2.1.2*/
+/*2.1.3*/
 	
 	/*Main color variables*/
 	:root
@@ -719,7 +719,7 @@
 	/*Chat again because youtube has nothing better to do. YouTube, WHY?!*/
 	.yt-live-chat-header-renderer-1, .yt-live-chat-message-input-renderer-1, .yt-live-chat-header-renderer-0, .yt-live-chat-message-input-renderer-0, .paper-menu-0, .paper-menu-1, .yt-live-chat-ticker-renderer-0,.yt-live-chat-ticker-renderer-1,.yt-live-chat-renderer
 	{
-		background-color: var(--second-background) !important;
+		background-color: var(--main-background) !important;
 	}
 	.yt-live-chat-text-message-renderer-1, .yt-live-chat-text-message-renderer-0, .yt-live-chat-item-list-renderer-1 #item-scroller.yt-live-chat-item-list-renderer, .yt-live-chat-item-list-renderer-0 #item-scroller.yt-live-chat-item-list-renderer
 	{
