--- a/YouTubeDeepDarkClassic.css
+++ b/YouTubeDeepDarkClassic.css
@@ -326,6 +326,9 @@
 	.no-flash-error,#collaboration-settings .collaboration-settings-invite-link.disabled::before,.about-description-editor .c4-module-is-editable:hover, .about-business-email-editor .c4-module-is-editable:hover, .about-metadata-editor .c4-module-is-editable:hover,.pl-header-inlineedit .c4-module-is-editable:hover,.Zm-Jw-kq-Jw-Fo,.Zm-Jw-kq-cb,.timeline-row,.vm-list-view .vm-video-list .vm-video-item,.yt-alert-panel,.html5-compatibility-table li,no-flash-error,.HPHGCHB-r-a,.yt-uix-form-input-select-content,#comment-settings .comment-settings-header,.video-dds .topline,.tabbed-page .tab.active,#creator-sidebar .creator-sidebar-section.selected > a.selected, #creator-sidebar .creator-sidebar-item.selected > a,#creator-sidebar > #creator-sidebar-section-id-dashboard.selected > h3 a, #creator-sidebar > #creator-sidebar-section-id-your-contributions.selected > h3 a,.dashboard-widget-footer .dashboard-widget-view-all-link:hover,.comment-simplebox,.comment-simplebox-text, .comment-simplebox-prompt,.share-email-preview-container,.add-to-widget .create-playlist-item:hover{
 		background: var(--main-background) !important;
 	}
+	paper-menu, paper-dialog, yt-report-form-modal-renderer, yt-confirm-dialog-renderer{
+		background: var(--main-background) !important;
+	}
 	/*Hover for menus and such*/
 	.add-widget-menu-item:hover .add-widget-menu-item-contents,.audio-ui-featured-row:hover,.watch-editable:hover,.vm-list-view .vm-video-metrics a:hover,.video-dds .entry:hover .highlight,.yt-uix-form-input-select-element option,#creator-sidebar .creator-sidebar-section a:hover,#player-playlist .playlist-videos-list li:hover,.add-to-widget .addto-playlist-item:hover,.yt-ui-menu-item:active, .guide-flyout-trigger.on-hover, .guide-item:hover, .guide-item:hover .yt-deemphasized-text, .guide-collapsible-item .yt-uix-expander-head:hover, .yt-uix-button-menu .yt-uix-button-menu-item.selected, .yt-uix-button-menu .yt-uix-button-menu-item-highlight .yt-uix-button-menu-item, .yt-uix-button-menu .yt-uix-button-menu-item:hover, #player-playlist :not(.watch-queue-nav) .playlist-videos-list li.currently-playing:hover{
 		background: var(--hover-background) !important;
@@ -344,6 +347,9 @@
 	}
 	.comment-renderer.channel-owner .comment-author-text:hover,.comment-renderer-author-comment-badge.creator:hover{
 		background: var(--main-background) !important;
+	}
+	ytd-menu-navigation-item-renderer:hover, ytd-menu-service-item-renderer:hover, a.ytd-menu-navigation-item-renderer:hover{
+		background-color: var(--main-background) !important;
 	}
 	/*Things that I want to not have a background such in the case of a hover */
 	.auto-add-rules.yt-ui-elementlist-list,.comments .channel-owner .comment-header .user-name,.ytp-cards-teaser .ytp-cards-teaser-box,#eow-title:hover,#audio-ui-pagefold,.HPHGCHB-ob-d,.HPHGCHB-P-e h3,.yt-uix-button-panel:hover .creator-bar-item .yt-uix-button-text-dark, .yt-uix-button-panel .creator-bar-item .yt-uix-button-text-dark:hover,.standalone-collection-badge-renderer-text a,.yt-uix-clickcard-title, .yt-uix-hovercard-title,.ytp-ce-size-853 .ytp-ce-video-title, .ytp-ce-size-853 .ytp-ce-playlist-title,.yt-dialog-base .yt-dialog-header .yt-dialog-close,.exp-comments-refresh .comment-replies-renderer-view, .exp-comments-refresh .comment-replies-renderer-hide, .exp-comments-refresh .comment-replies-renderer-paginator, .exp-comments-refresh .comment-author-text,#comment-section-renderer .sprite-comment-actions,#yt-masthead-user #sb-button-notify,.ytp-ce-size-640 .ytp-ce-video-title, .ytp-ce-size-640 .ytp-ce-playlist-title,#advanced-options,#player-console,.comment-renderer-reply,#player-playlist :not(.watch-queue-nav) .playlist-videos-list li.currently-playing .yt-ui-ellipsis,#player-playlist .playlist-videos-list .yt-ui-ellipsis,.guide-sort-button,.yt-badge,.exp-comments-refresh #comment-section-renderer .comment-renderer-reply,.ytp-ce-video-title,#video-title,.caption-queue td:hover{
@@ -758,6 +764,16 @@
 	{
 		background: transparent !important;
 	}
+  yt-formatted-string.ytd-menu-service-item-renderer, yt-formatted-string.ytd-menu-navigation-item-renderer, yt-formatted-string.yt-options-renderer, #title.yt-report-form-modal-renderer, #scroller.yt-confirm-dialog-renderer{
+		color: var(--main-text);
+	}
+	ytd-menu-navigation-item-renderer:hover yt-formatted-string, ytd-menu-service-item-renderer:hover yt-formatted-string, #submit-button a, #confirm-button a{
+		color: var(--main-color) !important;
+	}
+  /* chat dialog radio button style */
+	#onRadio.paper-radio-button {
+		--paper-radio-button-checked-color: var(--main-color) !important;
+  }
 	/*Sign in chat*/
 	.yt-live-chat-message-renderer-0, .yt-live-chat-message-renderer-1, yt-button-renderer.style-dark[is-paper-button]
 	{
