--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -1,11 +1,11 @@
-@-moz-document domain("youtube.com") {
+@-moz-document regexp('https?:\/\/(?!gaming\.).*youtube\.com\/.*') {
 
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
 /*GNU General Public License v3.0.*/
 
-/*2.5.0*/
+/*2.5.1*/
 
 	/*Main color variables*/
 	:root
